[package]
name = "gorn"
version = "0.1.1"
edition = "2021"
description = "Calculates blake2 hash from file or directory."
authors = ["Patsakula Nikita <nikita.patsakula@gmail.com>"]
license = "MIT"

[dependencies]
blake2 = "0.10"
clap = "3.0.0-beta.5"
hex = "0.4"
rayon = "1.5"
walkdir = "2.3"

[profile.release]
lto = "thin"
